<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <EditText
        android:id="@+id/edit_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_product_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_supplier"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_product_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_supplier_phone_number"
        android:inputType="textCapWords" />
</LinearLayout>
